sitemedia/scss/site.scss
/* ... */
.project-detail {

    overflow: auto;  /* include floated grid content */

	header {
		// @include grid-container;
        @include grid-collapse;

    	/* full width of container */
    	margin-left: 0;
    	margin-right: 0;
    	width: auto;

	    @include grid-column(6);
  		@include grid-push(3);

		@include grid-media($large-grid) {
			// @include grid-container;
	        @include grid-collapse($large-grid);
		    @include grid-column(9);
	  		@include grid-push(3);
	  	}

	    @media (max-width: $small-max-width) {
	    	@include grid-push(0);
	    	/* full width of container */
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

	    h2 {
		  font-size: modular-scale(-1);

			@include grid-media($large-grid){
			    @include grid-column(7);
			    margin-left: 0;
			}
		}

	  	.short_description {
	  		font-style: italic;
		    // @include grid-column(7);
		    margin-left: 0;
		    margin-right: 0;

			@media (min-width: $large-min-width) {
				/* according to spec, should be 7 cols, but can't
				   get grid cols right if we nest; should be close enough */
			    width: 75%;
			}
	  	}
	}
	.contributors {
		font-size: 18px;

		@include grid-column(3);
		@include grid-media($large-grid){
		    @include grid-column(3);
		}
	    @media (max-width: $small-max-width) {
	    	width: 100%;
	    }

	    @media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

		ul {
			list-style-type: none;
			color: $dark-grey;
			padding: 0;
			font-family: $font-stack-headline;

			li.role {
				margin-top: 15px;
				font-family: $font-stack-body-text;
			}
		}

		h3 {
			font-weight: normal;
			font-style: italic;
			font-size: 18px;
			margin-bottom: 0;
			font-family: $font-stack-body-text;
		}

        a {
	    	color: black;
	    	text-decoration: none;
	    	font-family: $font-stack-headline;
	    	font-size: 18px;
	    }

	}

	.description {

		@include grid-column(6);
		@include grid-media($large-grid){
		    @include grid-column(9);
		}

		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
			margin-bottom: 100px;
	    }

		img {
			max-width: 100%;
			margin: 50px auto;
		}
		p {
			margin-top: 0;
		}
	}


}


.profile {
	/* very similar to project detail;
	  TODO: make mixins or includes for common layout */
	@include grid-container;

	header {
		@include grid-container;
        @include grid-collapse;

    	/* full width of container */
    	margin-left: 0;
    	margin-right: 0;
    	width: auto;

  		@include grid-push(3);
		@include grid-media($large-grid) {
			@include grid-container;
	        @include grid-collapse($large-grid);
	  		@include grid-push(3);
	  	}
	    @media (max-width: $small-max-width) {
	    	@include grid-push(0);
	    	/* full width of container */
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

	    h1 {
	    	margin-bottom: 0;
	    }

	  	.title {   /* equiv to project short_description */
	  		font-style: italic;
	  		font-family: $font-stack-body-text;
	  		color: $dark-grey;
	  		font-size: 21px;

			margin-left: 0;
		    margin-right: 0;
	    	width: auto;

			@include grid-media($large-grid){
			    @include grid-column(7);
			    margin-left: 0;
			}

	  	}
	}
	.links {
		/* same sidebar layout as project contributors */
		text-transform: capitalize;
		margin-bottom: 35px;

		@include grid-column(3);
		@include grid-media($large-grid){
		    @include grid-column(3);
		}

	    @media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

		ul {
			list-style-type: none;
			color: $dark-grey;
			padding: 0;
		}

		 a {
	    	color: black;
	    	text-decoration: none;
	    	font-family: $font-stack-headline;
	    	font-size: 18px;
	    }
	}

	img {
		margin: 0 0 50px 0;
    	width: auto;

		@include grid-column(5);
		@include grid-media($large-grid){
			@include grid-column(5);
		}
		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }
	}

	.education {
		color: $dark-grey;
		font-family: $font-stack-headline;
		font-size: 18px;

		@include grid-column(4);
		@include grid-push(3);
		@include grid-media($large-grid){
			@include grid-column(4);
		}
		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }
	    a {
	    	color: $dark-grey ;
	    	text-decoration: none;
	    	// background-image: none !important;
	    }

	    ul {
	    	@include list-style-reset;

	    	li {
	    		margin-bottom: 20px;
	    	}
	    }
	}
	p {
		margin-top: 0;
		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

	}

	.bio {
		@include grid-column(6);
		@include grid-push(3);
		@include grid-media($large-grid){
			@include grid-column(8);
			@include grid-push(3);
		}
		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

	}


}
/* ... */

